SERVER-105006 [[msvc:forceinline]] (#36039)

GitOrigin-RevId: 82164af36384c1950c5e9a975e50ed0964447248